Added links for each webpage of the website.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/pierogi.html">Pierogi</a>
+    <ul>
+        <li><a href="recipes/pierogi.html">Pierogi</a></li>
+        <li><a href="recipes/Bubble_and_Squeak.html">Bubble & Squeak</a></li>
+        <li><a href="recipes/Rice_Pudding.html">Rice Pudding</a></li>
 </body>
 </html>
