--- a/index.html
+++ b/index.html
@@ -4,12 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="styles/index.css">
+    
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1 class="h1">Odin Recipes</h1>
+    <p>
+        <img src="https://www.theodinproject.com/mstile-310x310.png" 
+        alt="The Odin Project Logo" height="310" width="310"
+        style="border: 10px dotted dodgerblue;">
+    </p>
+    <div class="recipe-links">
     <ul>
-        <li><a href="recipes/pierogi.html">Pierogi</a></li>
-        <li><a href="recipes/Bubble_and_Squeak.html">Bubble & Squeak</a></li>
-        <li><a href="recipes/Rice_Pudding.html">Rice Pudding</a></li>
+        <li>
+            <button class="b1"><a href="recipes/pierogi.html">Pierogi</a></button></li>
+        <li>
+            <button class="b2"><a href="recipes/Bubble_and_Squeak.html">Bubble & Squeak</a></button></li>
+        <li>
+            <button class="b3"><a href="recipes/Rice_Pudding.html">Rice Pudding</a></button></li>
+    </ul>
+    </div>
 </body>
 </html>
